# vondutch_patcher

./: README.md  addon_patch_log.txt  gui_frontend.py  gui_launcher.py  process_inspector.py  scan_results.json  tmp.txt
OfflineModMenu/: CMakeLists.txt  build.bat
OfflineModMenu/configs/: default.json
OfflineModMenu/installer/: CMakeLists.txt  setup_instructions.txt  vcpkg.json
OfflineModMenu/mods/: README.txt
OfflineModMenu/resources/: generate_icon.ps1.in  icon.ico.b64  offlinemodmenu.rc.in  theme.ini
OfflineModMenu/src/: config.cpp  config.hpp  gui.cpp  gui.hpp  main.cpp  memory.cpp  memory.hpp  process.cpp  process.hpp  utils.cpp  utils.hpp
OfflineModMenu/src/mods/: base_mod.hpp  godmode.cpp  godmode.hpp  infammo.cpp  infammo.hpp  mod_manager.cpp  mod_manager.hpp
addon/: __init__.py  auto_patch.py  patch_runner.py  utils.py
